got basic logic for simple jumps and movement for both red and black checkers. Current issues are deselecting targeted areas after changing who you want to move, target checker spaces remaining after jumping opposing checker, and inability to chain moves together

--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,8 @@ h2 {
 .active {
   border: solid 3px gold;
 }
+
+.active-jump {
+  border: solid 3px blue;
+
+}
